# dotfiles

./: .gitattributes  .gitignore  README.md  update.sh
auto_generated/: __back_data.txt  __bin_command_urls.txt
bin_scripts/: comp.sh  create-class.sh  dictation.py  dotmason.py  extract-cookies.sh  f.sh  ff.py  fff.py  firefox  fix-ugly-name.py  gDrive.sh  github_cli.bash  iina-privacy.sh  zed-root.sh
binary_exe/: envpath  exiv2  pstree  vhtop
config/aria2/: README.md  aria2-launchctl.conf
config/aria2/script/: aria2c_add_to_rpc_downloder.sh  main_script.sh  see_aria2_hisoty.sql  sql_history_structure.sql
config/bat/: config
config/broot/: verbs.hjson
config/btop/: README.md  btop.conf-bak
config/git/: gitattributes  gitconfig  gitconfig_github
config/git/git_ignore/: main.c
config/glance/: glance.yml.bk
config/helix/: config.toml
config/homebrew/: brew.env
config/htop/: htoprc.bk
config/joshuto/: joshuto.toml  mimetype.toml
config/lf/: icons  previewer  pv.sh
config/mackup/: mackup.cfg
config/mpv/: .gitignore  input.conf
config/navi/cheats/: security__ssh.cheat  user__shell_commands.cheat
config/navidrome/: navidrome.toml
config/ncdu/: config
config/newsboat/: config  urls
config/newsboat/scripts/: bookmark.sh  get_thumbnail.sh  list-link.sh
config/nnn/: QuickLookForNNN.shortcut  nnn_help.txt  nnn_install_plugins.sh
config/nnn/patchs/: nnn-builtin-cd-lastdir-v5.patch  nnn_keybinds-v5.patch
config/nnn/plugins/: copy_path  fix_ugly_name  mmv_batch_renamer  zoxide
config/nvim/: init.lua
config/pandoc/: .gitignore  Makefile
config/pandoc/headers/: github-markdown-dark.css  mdTohtml-footer.html  mdTohtml-header.html  readmeToHTML-footer.html  readmeToHTML-styles.css
config/radare2/: README.md
config/rclone/backup_scripts/: exclude_files.txt  syncLocalfiles.py  sync_data_sample.json
config/rclone/excludes/: keepassxc.txt
config/readeck/: config.toml  local.app.readeck.plist
config/ripgrep/: config
config/ruff/: ruff.toml
config/shiori/: local.app.shiori.plist
config/starship/: starship.toml
config/task/: taskrc
config/tidy/: tidy-html.sh
config/tig/scripts/: pause_on_error
config/wireproxy/: README.md  check_wireproxy.sh  wireproxy.conf
config/yt-dlp/: you-tube_playlist.txt
config/yt-dlp/aria2_script/: write_history.sh
config/yt-dlp/newsboat/: yt-dlp_newsboat-terminal.sh
config/zed/: keymap.json  settings.json
config/zsh/: .gitignore  alias.zsh  functions.sh  zlogin.sh  zprofile.zsh  zshenv-footer.zsh
darwin/: install.zsh
darwin/auto_generated/: __back_data.txt  __bin_command_urls.txt  __defaults.write.sh
darwin/bin_scripts/: about_github_repo.py  comp.sh  fontify.py  imgur  message.sh  notify.sh  pkg-config-static.py
darwin/binary_exe/: aria2c  clock  entr  gsed  htop  live-server  mmv  ncdu  nnn  nnn-all  pkgconf  tidy-html  tig  tmux  tree  xxc
darwin/config/btop/: .gitignore  installTheme.zsh
darwin/config/fastfetch/: config.jsonc
darwin/config/fd/: ignore
darwin/config/fzf/: config
darwin/config/git/: git_diff_binary_files  gitconfig  gitignore  gitignore_globle  nvimdiff.lua
darwin/config/glance/: com.user.glance.plist  glance.yml
darwin/config/helix/: config.toml  languages.toml
darwin/config/homebrew/: .gitignore
darwin/config/joshuto/: theme.toml
darwin/config/newsboat/: config  urls
darwin/config/npm/: npmrc
darwin/config/nvim/: init.lua
darwin/config/pip/: pip.conf
darwin/config/qBittorrent/: qBittorrent.ini
darwin/config/rclone/: .gitignore  README.md
darwin/config/shiori/: README.md
darwin/config/taplo/: taplo-zed.sh  taplo.toml
darwin/config/tealdeer/: config.toml
darwin/config/tidy/: tidyrc-html
darwin/config/tig/: config.toml
darwin/config/tldr/: config.toml
darwin/config/wireproxy/: com.user.wireproxy.plist  wireproxy_launchctl.zsh
darwin/config/yt-dlp/: instagram.txt  you-tube_short_vidoe.txt
darwin/config/zed/: settings.json
darwin/config/zsh/: alias.zsh  functions.sh  plugins.zsh  zlogout.zsh  zshenv-footer.zsh  zshrc.zsh
darwin/etc/: bash_profile.bash  curlrc  myProfile.terminal  sudo  wgetrc
darwin/hooks/: updateNNN.bash
darwin/hooks/dotmason/: README.md  firefox.toml-temp  iaito.toml  keepassxc.toml  qBittorrent.toml
debian/: README.md  sway_install.sh
debian/auto_generated/: __fonts-lists_old.txt
debian/bin_scripts/: extractor.sh  firefox  fix_libtorch_paths.sh  make-archive.sh  zed-root.bash
debian/config/aria2/: .gitignore  aria2.conf  com.user.aria2.plist
debian/config/broot/: conf.hjson
debian/config/fastfetch/: config.jsonc
debian/config/fzf/: config
debian/docs/: install_waylan.md
debian/etc/: curlrc
debian/hooks/: config_link.json  installNerdfonts.py  install_link_dot_file.py
etc/: bashrc.bash  cargo_config.toml  sudo_su-bashrc.sh
global/: Download_ytVidoes.mk
global/c-cpp-template/: Makefile  c.mk  cpp.mk  leetcode.mk  swift-format.json
global/c-cpp-template/c++/: .clang-tidy  CMakeLists.txt
global/c-cpp-template/c++/.zed/: debug.json
global/c-cpp-template/c++/src/: main.cpp
global/c-cpp-template/c++/tests/: CMakeLists.txt  main.cpp
global/c-cpp-template/c/tests/: CMakeLists.txt  function_test.c
global/c-cpp-template/wx-form-template/: CMakeLists.txt
global/c-cpp-template/wx-form-template/doc/: icon.icns
global/c-cpp-template/wx-form-template/src/: App.cpp  App.h  Info.plist
global/c-cpp-template/wx-form-template/wx-form/: FormBuilder.cpp  FormBuilder.h  Untitled.fbp
global/embedded/: embedded-ENV.sh
global/embedded/free-RTOS-teamplate-rp2040/: CMakeLists.txt  FreeRTOSConfig.h  supported_board_by_project.json
global/embedded/free-RTOS-teamplate-rp2040/.zed/: settings.json  tasks.json
global/embedded/free-RTOS-teamplate-rp2040/src/: functions.c  functions.h  main.c
global/phone/: Makefile  phone  rec.py
global/user_c_lib/: mv_c.c  pathenv.c
hooks/: config_link.json  install_bin_command.py  install_github_scrpits.sh  install_link_dot_file.py  packageDataBackup.py  updateFfmpeg.py
hooks/dotmason/: dotmason.py  general.toml  sqlitebrowser.toml
(+86 files in other folders)
